<resources>
    <string name="app_name">Volley Request</string>
    <string name="string_request">String Request</string>
    <string name="json_object_request">Json Object Request</string>
    <string name="json_array_request">Json Array Request</string>
    <string name="image_request">Image Request</string>
    <string name="applicant_name">Android Codility</string>
    <string name="exit">Exit</string>
    <string name="no_internet">No Internet Available..!!</string>
    <string name="json_recyclerview_sample">JSON RecyclerView Sample</string>
    <string name="loading">Loading..</string>
</resources>
