<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.codility.jsonvolley.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/applicant_name"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btStringRequest"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginRight="1dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_background"
            android:text="@string/string_request"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btJsonObjectRequest"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_light_background"
            android:text="@string/json_object_request"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btJsonArrayRequest"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginRight="1dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_light_background"
            android:text="@string/json_array_request"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btImageRequest"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="1dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_background"
            android:text="@string/image_request"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:onClick="exitView"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:ignore="OnClick" />

</LinearLayout>
